# project-scarlet

./: .env.example  .gitignore  README.md  build.py  cli.py  config.toml  pyproject.toml  server.py
modules/: 01_directive.md  02_identity.md  03_visual.md  04_personality.md  05_functions.md  06_work_mode.md  07_lorebook.md  08_memory.md  09_examples.md  10_rules.md
scarlett/: __init__.py  agent.py  config.py  llm.py  memory.py  prompt.py  semantic.py  tools.py
static/: app.js  index.html  style.css
